--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     color: rgb(44, 4, 44);
     background-color: #ccc;
     text-align: center;
+    font-size: 16px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
@@ -14,4 +15,17 @@ body {
     font-weight: bold;
     font-size: 25px;
     color: rgb(197, 120, 31);
+}
+
+#container {
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #000;
+    margin: 0 auto;
+    margin-bottom: 20%;
+}
+
+#container h1 {
+    font-size: 20px;
 }
