--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,22 @@ body {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+#cabecera {
+    background-color: #88f;
+    box-shadow: 0px 2px 20px 0px rgb(0, 0, 0);
+    color: #fff;
+    margin: 0;
+    padding: 0.7em;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+#cabecera #tagline {
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 .Card {
     border: solid black;
     width: 50%;
@@ -19,7 +35,7 @@ body {
 
 #container {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: left;
     border: 1px solid #000;
     margin: 0 auto;
@@ -28,4 +44,8 @@ body {
 
 #container h1 {
     font-size: 20px;
+}
+
+#post {
+    padding: 0.3em 1em;
 }
