--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: #ccc;
     text-align: center;
     font-size: 16px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:'Courier New', Courier, monospace;
 }
 
 .Card {
