--- a/css/styles.css
+++ b/css/styles.css
@@ -2,17 +2,17 @@ body {
     color: rgb(44, 4, 44);
     background-color: #ccc;
     text-align: center;
-    font-size: 16px;
-    font-family:'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecera {
-    background-color: #88f;
+    background-color: rgb(64, 64, 224);
     box-shadow: 0px 2px 20px 0px rgb(0, 0, 0);
     color: #fff;
     margin: 0;
     padding: 0.7em;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
 }
 
